Process Book Finished

--- a/Process Book 2/Project_3.tex
+++ b/Process Book 2/Project_3.tex
@@ -23,21 +23,22 @@
 
 \section{Introduction}
 \subsection{Motivation}
-Most current visualizations of social data require viewers to already have a subject matter in mind; they allow viewers to search for and investigate specific keywords, hashtags, or locales. However, we think that social data is interesting primarily because it allows us to discover new topics for investigation - topics that are being generated in real time by the humans who are producing the social data. Accordingly, we want to build a visualization that guides a curious but unfocused viewer in identifying undiscovered topics/events that are currently occurring in the real world.
+Most current visualizations of social data require viewers to already have a subject matter in mind; they allow viewers to search for and investigate specific keywords, hashtags, or locales. However, we think that social data is interesting primarily because it allows us to discover new topics for investigation - topics that are being generated in real time by the humans who are producing the social data. Accordingly, we want to build a visualization that guides a curious but unfocused viewer in identifying undiscovered topics/events that are currently occurring in the real world. Furthermore, we hope to help users learn about and experience these events through the social data they generate. In this way, we hope that our visualization not only tells a story, but tells a unique story to every viewer, depending on what they are interested in and when they are accessing our visualization. 
+
 
 \subsection{Goals}
-The two overarching research questions of our visualization for projects II and II are
+The two overarching research questions of our visualization for projects II and III are:
 \begin{enumerate}
 \item Can we identify "events" from real-time social data?
 \item If we can, what can we learn about such "events"?
 \end{enumerate}
-In project II, we built a visualization that tries to identify current events that are occurring in a user-specified geography (location + radius), using real time social data. Concretely, we pull a live stream of Twitter data arriving from the specified geography, and try to identify clusters of tweets; we are currently clustering primarily by geographical proximity. In effect, we've covered question $1$ from above in Project II.
+In project II, we built a visualization that tries to identify current events that are occurring in a user-specified geography (location + radius), using real time social data. Concretely, we pull a live stream of Twitter data arriving from the specified geography, and try to identify clusters of tweets; we were clustering primarily by geographical proximity. In effect, we've covered question $1$ from above in Project II.
 
-In project III, we have achieved two goals. First, we've worked on improving our visualization from Project II to allow users to not only identify current events, but help them learn and experience the events that they have identified. In Pheme 2.0, we've performed some basic natural language processing - word frequency analysis - and visualized this analysis to help users identify the nature and context of the event they have identified. Additionally, we allow users to explore the data within an event temporally, seeing the frequency of tweets over time and filtering events by time range. Second, we've built a significantly more involved server-side component to our visualization, which is constantly identifying events all over the world from live tweet data. Accordingly, users now have two choices for visualizing events; they can either use the live-streaming mode to identify events in real time and then learn about them, or explore pre-recorded events in more depth using the advanced visualization techniques mentioned above in Pheme 2.0.
+In project III, we have achieved two goals in addition to event identification. First, we've worked on improving our visualization from Project II to allow users to not only identify current events, but help them learn and experience the events that they have identified. In Pheme 2.0, we've performed some basic natural language processing - word frequency analysis - and visualized this analysis to help users identify the nature and context of the event they have identified. Additionally, we allow users to explore the data within an event temporally, seeing the frequency of tweets over time and filtering events by time range. Second, we've built a significantly more involved server-side component to our visualization, which is constantly identifying events all over the world from live tweet data. Accordingly, users now have two choices for visualizing events; they can either use the live-streaming mode to identify events in real time and then learn about them, or explore pre-recorded events in more depth using the advanced visualization techniques mentioned above in Pheme 2.0. Finally, we also significantly improved the event identification process that we had developed in Project II; the events that we now identify are significantly higher quality. 
 
 \section{Description of Data}
 \subsection{Source}
-As in Project II, the ultimate source of the data for our visualizations is Twitter, an online social network and microblogging service that allows users to instantaneously send and receive short messages, called tweets, on various electronic devices. Twitter is one of the most popular, if not the most popular, sites that produces real-time social data; as of 2012, it produced more than 340 million tweets per day \footnote{http://techcrunch.com/2012/07/30/analyst-twitter-passed-500m-users-in-june-2012-140m-of-them-in-us-jakarta-biggest-tweeting-city/}. Given our interest high-throughput social data streams, Twitter was a natural data source to focus on.
+As in Project II, the ultimate source of the data for our visualizations is Twitter, an online social network and microblogging service that allows users to instantaneously send and receive short messages, called tweets, on various electronic devices. Twitter is one of the most popular, if not the most popular, sites that produces real-time social data; as of 2012, it produced more than 340 million tweets per day \footnote{http://techcrunch.com/2012/07/30/analyst-twitter-passed-500m-users-in-june-2012-140m-of-them-in-us-jakarta-biggest-tweeting-city/}. Given our interest in high-throughput social data streams, Twitter was a natural data source to focus on.
 
 Using Twitter's API, we pulled tweets, which contained several relevant pieces of information:
 \begin{enumerate}
@@ -74,19 +75,19 @@ these credentials is a particularly finicky multi-step process. Only after
 forcing users to authenticate can we proceed with our visualization.
 
 \section{Related Work}
-To the extent that we've used what we've learned so far in CS 171, all the readings and lecture materials are related work; when justifying our visualization choices or visualization evolution, we will refer to this material. We consulted documentation related to the Twitter API and the Google Maps API very often while working on this project. Finally, we were inspired to investigate and study tweets and their geographical data by a past CS 171 project: Tweetography. \\ \\
+To the extent that we've used what we've learned so far in CS 171, all the readings and lecture materials are related work; when justifying our visualization choices or visualization evolution, we will refer to this material. We consulted documentation related to the Twitter API and the Google Maps API very often while working on this project. In addition, we were inspired to investigate and study tweets and their geographical data by a past CS 171 project: Tweetography. \\ \\
 \includegraphics[width=5.5in]{tweetography.png} \\ \\
 We found the concept of tweets appearing over time on a map very attractive, and based our visualization on this concept, even though the purpose and design of our visualization is very different than Tweetography.
 In addition to this source of inspiration for our overall visualization, there are several other sources which have guided us in specific design choices we've made (discussed in design evolution below):
 \begin{enumerate}
 \item In designing our tweet content visualization, which required some very basic natural language processing, we referred to several sources. \\ http://www.wordle.net/ and http://www.jasondavies.com/wordcloud/ gave us guidance on how to design word clouds, although our final design was markedly different. We referred to http://norm.al/2009/04/14/list-of-english-stop-words/ in deciding how to process the text of tweets.
-\item In designing the temporal aspect of our visualization - which allows users to explore the tweet data in an event by time - we made use of two convenient javascript packages, and referred to their documentation for both technical and design guidance. These two packages are http://square.github.io/crossfilter/ and http://nickqizhu.github.io/dc.js/. 
+\item In designing the temporal aspect of our visualization - which allows users to explore the tweet data in an event by time - we were inspired by http://bl.ocks.org/mbostock/1667367; using this framework, we built a tweet frequency over time chart that was linked to our main visualization via brushing. 
 \end{enumerate}
 
 \section{Design Evolution}
 At the end of project II our visualization was basically just tweets placed on a map, a sidebar containing a list of clusters and the tweets within the clusters, and a visual representation of the clusters on the map. A screenshot of our progress at that point can be found below: \\ \\
 \includegraphics[width=5.5in]{project2.png} \\ \\
-Coming into project III, we had several specific issues we wished to address about project II, as well as several specific goals (some of which address the issues mentioned) for project III:
+Coming into project III, we had several specific issues that we wished to address about project II, as well as several specific goals (some of which address the issues mentioned) for project III:
 \begin{enumerate}
 \item Issues:
 \begin{enumerate}
@@ -110,7 +111,7 @@ These issues and goals presented both significant technical and visualization de
 \subsubsection{User Flow}
 One of the biggest problems with our project II was that it was confusing to new users who did not have access to our process book. To address this issue, we decided to make a splash page explaining the key parts of our visualization, as shown below: \\ \\
 \includegraphics[width=5.5in]{splash.png} \\ \\
-In this way, we strengthen the narrative of our visualize; while our visualization does not tell a specific story (since it allows users to discover interesting stories in the world), it does this with specific progression. It \emph{opens} by loading tweets and identifying clusters; users watch as clusters form on the map. The \emph{middle} of this progression allows users to inspect individual tweets on the map by hovering over them, allowing them to understand the social data being produced in and around clusters as the clusters are identified. The \emph{closing} of our visualization allows users to learn about and explore the clusters that have been identified and the events that they represent.
+In this way, we strengthen the narrative of our visualization; while our visualization does not tell a specific story (since it allows users to discover interesting stories in the world), it does this with specific progression. It \emph{opens} by loading tweets and identifying clusters; users watch as clusters form on the map. The \emph{middle} of this progression allows users to inspect individual tweets on the map by hovering over them, allowing them to understand the social data being produced in and around clusters as the clusters are identified. The \emph{closing} of our visualization allows users to learn about and explore the clusters that have been identified and the events that they represent.
 
 In addition, one of our major goals in Project III was to allow users explore pre-recorded events. This helps address one of the issues we experienced in project II; there was often insufficient live streaming twitter data in a particular locale and at a particular time (because we only get a subsample of the full Twitter firehose), and thus tweets arrived slowly. Now, our visualization is compelling to users even in such a situation, because they can use the visualization to explore events that have been pre-recorded when live data is too sparse. By clicking on the ``Watch Pre-Recorded Events" button on the page shown above, the user is brought to the following page: \\ \\
 \includegraphics[width=5.5in]{splash2.png} \\ \\
@@ -160,31 +161,48 @@ Once difference to note is that the line chart no longer displays the tweet freq
 
 \section{Visualizations and Discussion} 
 \subsection{Visualization}
-Our visualization allows the user to select a geography of interest, and to draw tweets on the map in real time. By default, our visualization is currently focused on Boston; however, users can zoom and drag the map as desired to grab tweets from any particular region in the world. As data arrives, we also dynamically detect clusters of interesting points in the current viewport/geography, and visually group them by enclosing them in a circle and coloring them similarly. In addition, we display a list of all the identified clusters, and the component tweets in each cluster, in a secondary view - a sidebar to the the right of the map. Our visualization also supports several user interactions, as described below:
+Our visualization allows the user to select a geography of interest, and to draw tweets on the map in real time. By default, our visualization is currently focused on Boston; however, users can zoom and drag the map as desired to grab tweets from any particular region in the world. As data arrives, we also dynamically detect clusters of interesting points in the current viewport/geography, and visually group them by enclosing them in a circle and coloring them similarly. In addition, we display a list of all the identified clusters, the component tweets in each cluster, and a word cloud summarizing the cluster, in a secondary view - a sidebar to the the right of the map. Finally, we have a tertiary view below the map, which is a line chart displaying temporal data about the frequency of tweets over time.Our visualization also supports several user interactions, as described below:
 \begin{enumerate}
-\item Linking \& Brushing. Our visualization has two views, the map - which displays the geographical location of tweets and clusters - and the cluster sidebar - which contains a list of all clusters currently identified and the member tweets of each cluster. We support linking \& brushing by interactively highlighting the cluster marker on the map (by making it larger) when ther viewer hovers over the cluster in the cluster sidebar. 
+\item Linking \& Brushing. Our visualization has three views, the map - which displays the geographical location of tweets and clusters - the cluster sidebar - which contains a list of all clusters currently identified, a word cloud summarizing the cluster, the member tweets of each cluster - and the tweet frequency line chart - which displays data about the frequency of tweets arriving over the course of the visualization. We support linking \& brushing by interactively highlighting the cluster marker on the map (by making it larger) when ther viewer hovers over the cluster in the cluster sidebar, as well as brushing a specific section of the line chart to display only tweets that occurred within that time frame.
 \item Details-on-Demand. Our visualization supports details-on-demand with a tool tip. Whenever a user hovers over an individual tweet on the map, regardless of whether or not it is in a cluster, a tool tip will appear after a short delay showing the text contained in the tweet. 
 \item Drill-Down/Filter Capability. Our visualization suuports a drill-down or filtering interaction by allowing users to drag the map viewport and zoom in or out of the viewport as desired. In this way, the user can exactly specify what geographical area they wish to pull tweets and identify clusters in; the visualization responds by drilling-down/filtering tweets to match this specification. 
 \end{enumerate}
 
 \subsection{Discussion}
-The primary goal of our visualization was to identify events in the world as they were happening. At first, because our live twitter data stream only subsampled the true twitter ``firehose", we were concerned that we were not going to be able to find any clusters at certain zooms. Fortunately, in practice, our visualization identified several clusters with only a few minutes of streaming at a wide variety of zooms, from continent-level zoom (all of Africa), to country-level zoom (all of the US), to city-level zoom (Boston), and others. 
+The primary goal of our visualization is two-fold: to identify events in the world as they were happening, and allow to user to learn and experience these events through the social data they produce. We began work on the first half of our goal in Project II. In Project III, we've both continued working on event identification, and focused on visualizations that help the user learn and visualize the events that have been identify. We summarize here the improvements we've made between Project II and Project III; for a more detailed discussion of many of these changes, see the design evolution section above.
 
-However, it is not immediately clear that the clusters we found correspond to real-world events. For example, some of the events that we found look something like this: \\ \\
-\includegraphics[width=5.5in]{lonely.png} \\ \\
-This cluster is just one lonely soul, tweeting from the same location, trying to convince other people to follow him on twitter. We certainly wouldn't classify this as an event. However, a significant number of our clusters did end up corresponding to real-world events; we found a baseball game at Fenway: \\ \\
+\subsubsection{Improvements}
+As we demonstrated in Project II, we can definitely find clusters of tweets. However, while some of these clusters were of high quality, like the game at Fenway we found, \\ \\
 \includegraphics[width=5.5in]{fenway1.png} \\ \\
-The fact that some of our clusters are not real events suggests that we can further improve our current visualization technique (discussed in the conclusion below). However, we did ultimately succeed in independently discovering events in the world that we were not aware of. We take this as a proof of concept; it is definitely possible to take a high-throughput social data streaming source, and identify events that are occurring in the real world. 
+many of the clusters we found were not real events, like the one below.
+\includegraphics[width=5.5in]{lonely.png} \\ \\
+One of the things we spent a lot of time on in Project III was improving this situation. With an improved clustering algorithm, that ignores clusters consisting of only a few people, and clusters tweets both temporally and geographically, the average cluster we find is of much higher quality, although the quantity of clusters we find is significantly smaller. For example, events that we recently found include a group of friends celebrating the completion of college, and several people at a hockey game (Montreal Canadiens vs. Ottowa Senators) celebrating a goal in a hockey game: \\ \\
+\includegraphics[width=3in]{better2.png} \\ \\
+There is an important distinctions between these events and the events we found prior. These two groups of tweets are clearly very tightly related by subject matter (moreso than multiple tweets about the same baseball game), and are much smaller than the Fenway event we had identified earlier. Accordingly, our visualization is approaching the stage where it can identify both huge events like sports games and concerts, and smaller events (that may be subevents of those large events) like a goal in a sports game and a small group of people celebrating.
+
+In addition to improving the clustering algorithm, we devoted a large amount of time in Project III to improving the way we visualized events once we found them. First, we made a word cloud for each cluster, which will hopefully allow users to understand what a cluster is about without necessarily reading through all the tweets; this visual query (identifying the content of a cluster) is extremely important to the success of the visualization. As you can see in the hockey goal event above, some of the key words highlighted by the word cloud include ``goal," ``scored," ``habs" (the nickname for the Montreal Canadiens) \footnote{http://montreal.ctvnews.ca/habs-score-four-straight-to-beat-leafs-4-1-1.1257140}, and it is pretty easy to figure out from this word cloud that this cluster represents the event that the habs scored a goal. Second, we created an additional view for our visualization, that displays the frequency of tweets over time, which allows users to brush/filter the main part of our visualization (the map) to select only tweets from a specific time period. While it is more difficult to demonstrate in one screenshot exactly what the viewer learns from such a functionality, there are several ways in which a viewer might use such a functionality. The viewer may zoom in on an event, and see the ups and downs of social data production; peaks likely indicate exciting time frames. Furthermore, the viewer can filter down to a very specific time frame and see what tweets were produced there, again possibly concluding something about what was happening in the event at that specific time frame. 
+
+Finally, the most technically challenging aspect of our project was expanding the server-side component of our visualization. In particular, we wanted to be able to let viewers not only view live streaming twitter data, but also see pre-recorded streams of tweets that have been identified as interesting. More details about these challenges can be found in the Technical Design subsection of the Design Evolution section above.
+
+\subsubsection{Story Telling}
+While our visualization does not tell a story in the traditional sense - it is not focused on any one event or issue - we believe that it still has many story-telling aspects. In particular, we believe our visualization is a story-finding AND story-telling visualization; our visualization finds and tells a unique story to every viewer, based on their input of what (geography) they are interested in and when they are accessing our visualization.
+
+In particular, we designed our visualization to guide users through three primary steps, which can be viewed as an opening, middle, and closing:
+\begin{enumerate}
+\item Our visualization opens by allowing users to select a location and a zoom on a google map, allowing them to articulate information about the types of stories they're looking for.loading tweets and identifying clusters; users watch as clusters form on the map. 
+\item Next, our visualization begins loading in tweets and identifying clusters. Users can watch as clusters - which are potential stories - form on the map. 
+\item Finally, our visualization closes by allowing users to learn about and explore the clusters that have been identified and the stories they represent. They see a word cloud indicating the textual content of each story, can see how the story unfolded on twitter by using the tweet frequency time chart and selecting specific time frames of tweets, and examine the individual tweets that make up the story by hovering over them on the map.
+\end{enumerate}  
+
 
 \section{Conclusion}
-In Project 2, we implemented Pheme, a real-time social data visualization. Pheme demostrates that it is possible to identify real events by examining the instantaneous social data generated by people participating in the events. Furthermore, Pheme allows users to experience and visualize events all over the world, through the social data these events generate, on their home computer, in real time.
+In Projects II and III, we have implemented Pheme, a real-time social data visualization. Pheme demostrates that it is possible to identify real events by examining the instantaneous social data generated by people participating in the events. Furthermore, Pheme allows users to experience and visualize events all over the world, through the social data these events generate, on their home computer, in real time.
 
 \subsection{Future Work}
-In Project 3, we hope to improve on Pheme in several ways:
+We plan on continuing to work on this project outside of CS 171. We hope to improve on Pheme in several ways in the future, including but not limited to:
 \begin{enumerate}
-\item Refine our clustering algorithm to ignore certain types of non-events, including one individual tweeting rapidly. 
-\item Extend our clustering algorithm to identify events using other closeness metrics, rather than just geographical closeness. We might consider tweets that we identify to be related through natural language processing, some metric related to time, etc.
-\item Aggregate information about identified events, such as trying to determine what the event is about by analysing the constituent tweets, and pulling in data from that locale using other social data sources, like Instagram.
-\item Implement reclustering. By doing so, we could allow users to drill down into one coarse event that they had discovered, and possibly find subevents within that event. For example, at a heavy-metal concert, one might discover a subevent in the mosh pit, and another behind the stage. 
+\item More natural language processing to get even more content information out of clusters. 
+\item Build in support for other languages; right now, the stopword filtration we're doing only applies to English words.
+\item Detect places of interest in the world currently, and automatically drag/zoom the viewer there in the live streaming version of the visualization when they begin.
 \end{enumerate} 
 \end{document}
